Redis updates
